--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "framework": null,
   "functions": {
     "api/index.php": {
-      "runtime": "vercel-php@0.7.0"
+      "runtime": "vercel-php@0.6.0"
     }
   },
   "routes": [
@@ -23,6 +23,7 @@
   "env": {
     "APP_NAME": "DSTRCT",
     "APP_ENV": "production",
+    "APP_KEY": "base64:tOq4mXUAENr196WPpCRv2zydWTjg8TBOLnpfCaG82n8=",
     "APP_DEBUG": "false",
     "APP_URL": "https://dstrct-project.vercel.app",
 
@@ -31,11 +32,16 @@
     "APP_FAKER_LOCALE": "en_US",
 
     "APP_MAINTENANCE_DRIVER": "file",
-
+    "PHP_CLI_SERVER_WORKERS": "4",
     "BCRYPT_ROUNDS": "12",
 
-    "LOG_CHANNEL": "errorlog",
-    "LOG_LEVEL": "error",
+    "LOG_CHANNEL": "stack",
+    "LOG_STACK": "single",
+    "LOG_DEPRECATIONS_CHANNEL": "null",
+    "LOG_LEVEL": "debug",
+
+    "DB_CONNECTION": "sqlite",
+    "DB_DATABASE": "/tmp/database.sqlite",
 
     "SESSION_DRIVER": "database",
     "SESSION_LIFETIME": "120",
@@ -49,12 +55,30 @@
 
     "CACHE_STORE": "database",
 
-    "MAIL_MAILER": "log", 
+    "MEMCACHED_HOST": "127.0.0.1",
+
+    "REDIS_CLIENT": "phpredis",
+    "REDIS_HOST": "127.0.0.1",
+    "REDIS_PASSWORD": "null",
+    "REDIS_PORT": "6379",
+
+    "MAIL_MAILER": "log",
+    "MAIL_SCHEME": "null",
+    "MAIL_HOST": "127.0.0.1",
+    "MAIL_PORT": "2525",
+    "MAIL_USERNAME": "null",
+    "MAIL_PASSWORD": "null",
     "MAIL_FROM_ADDRESS": "hello@example.com",
     "MAIL_FROM_NAME": "DSTRCT",
 
+    "AWS_ACCESS_KEY_ID": "",
+    "AWS_SECRET_ACCESS_KEY": "",
+    "AWS_DEFAULT_REGION": "us-east-1",
+    "AWS_BUCKET": "",
+    "AWS_USE_PATH_STYLE_ENDPOINT": "false",
+
     "VITE_APP_NAME": "DSTRCT",
-    
+
     "APP_CONFIG_CACHE": "/tmp/config.php",
     "APP_EVENTS_CACHE": "/tmp/events.php",
     "APP_PACKAGES_CACHE": "/tmp/packages.php",
